<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color" >
	<RelativeLayout 
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_hight"
        android:background="@color/bg_action_bar_1">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/main_margin"
            android:paddingRight="@dimen/main_margin"
            android:src="@drawable/ic_back_selector"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/qqy_18sp"
            android:textColor="@color/big_title"
            android:text="@string/feedback"/>
        
        <TextView 
            android:id="@+id/save_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="@dimen/qqy_14sp"
            android:textColor="@color/dark_grey"
            android:layout_marginRight="12dp"
            android:text="@string/commit"/>
        
    </RelativeLayout>
    <View
	    android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_gravity="top"
        android:layout_below="@id/title_layout"
        android:background="@color/line_color" />
	<EditText 
	    android:id="@+id/feedback_content"
	    android:layout_width="fill_parent"
	    android:layout_height="150dp"
	    android:layout_below="@id/line"
	    android:background="@drawable/feedback_bg_content"
	    android:hint="@string/feedback_hint"
	    android:padding="10dp"
	    android:maxLength="200"
	    android:gravity="top"
	    android:textSize="@dimen/qqy_16sp"
	    android:textColor="@color/big_title"
	    android:layout_marginTop="@dimen/main_margin"
	    android:layout_marginLeft="@dimen/main_margin"
	    android:layout_marginRight="@dimen/main_margin"/>
	
	<EditText 
	    android:id="@+id/feedback_contact"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/feedback_content"
	    android:background="@drawable/feedback_bg_content"
	    android:hint="@string/feedback_contact_hint"
	    android:padding="10dp"
	    android:maxLength="20"
	    android:gravity="top"
	    android:textSize="@dimen/qqy_16sp"
	    android:textColor="@color/big_title"
	    android:layout_marginTop="8dp"
	    android:layout_marginLeft="@dimen/main_margin"
	    android:layout_marginRight="@dimen/main_margin"/>

</RelativeLayout>
