<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"  >
	<RelativeLayout 
        android:id="@+id/userinfo_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_hight"
        android:background="@color/bg_action_bar_1"
        android:layout_marginBottom="16dp">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/main_margin"
            android:paddingRight="@dimen/main_margin"
            android:src="@drawable/ic_back_selector"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/qqy_18sp"
            android:textColor="@color/big_title"
            android:text="@string/user_info"/>
        <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:layout_gravity="top"
	        android:layout_alignParentBottom="true"
	        android:background="@color/line_color" />
    </RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@id/userinfo_title_layout">
	    <!-- 头像 -->
	    <LinearLayout 
	        android:id="@+id/user_portrait_biglayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="16dp"
	        android:clickable="true"
	        android:focusable="true"
	        android:orientation="vertical"
	        android:background="@drawable/layout_selector">
	        <include layout="@layout/p_grey_line"/>
	        <RelativeLayout
	            android:layout_width="fill_parent"
	            android:paddingLeft="24dp"
	            android:paddingRight="24dp"
	            android:layout_height="86dp">
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@color/big_title"
	                android:textSize="@dimen/qqy_16sp"
	                android:layout_centerVertical="true"
	                android:text="@string/user_portrait"/>
	            <ImageView
	                android:id="@+id/right_arrow1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="10dp"
	                android:src="@drawable/usercenter_right" />
	            <ImageView
	                android:id="@+id/userinfo_user_protrait"
	                android:layout_width="@dimen/table_hight"
	                android:layout_height="@dimen/table_hight"
	                android:scaleType="fitXY"
	                android:layout_centerVertical="true"
	                android:layout_toLeftOf="@id/right_arrow1"
	                android:src="@drawable/default_portrait" />
	        </RelativeLayout>
	        
	        <include layout="@layout/p_grey_line"/>
	    </LinearLayout>
	    
	    <!-- 昵称 -->
	    <LinearLayout 
	        android:id="@+id/user_nickname_biglayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/user_portrait_biglayout"
	        android:clickable="true"
	        android:focusable="true"
	        android:orientation="vertical"
	        android:background="@drawable/layout_selector">
	        <include layout="@layout/p_grey_line"/>
	        <RelativeLayout 
	            android:layout_width="fill_parent"
	            android:paddingLeft="24dp"
	            android:paddingRight="24dp"
	            android:layout_height="56dp">
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@color/big_title"
	                android:textSize="@dimen/qqy_16sp"
	                android:layout_centerVertical="true"
	                android:text="@string/nick"/>
	            <ImageView
	                android:id="@+id/right_arrow2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="10dp"
	                android:src="@drawable/usercenter_right" />
	            <TextView
	                android:id="@+id/userinfo_user_nickname"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_toLeftOf="@id/right_arrow2"
	                android:textColor="@color/dark_grey"
	                android:textSize="@dimen/qqy_16sp"
	                android:text="@string/app_name" />
	        </RelativeLayout>
	        <include layout="@layout/p_grey_line"/>
	    </LinearLayout>
	    <!-- 年级 -->
	    <LinearLayout 
	        android:id="@+id/user_sex_biglayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:layout_below="@id/user_nickname_biglayout"
	        android:clickable="true"
	        android:focusable="true"
	        android:orientation="vertical"
	        android:background="@drawable/layout_selector">
	        <RelativeLayout 
	            android:layout_width="fill_parent"
	            android:paddingLeft="24dp"
	            android:paddingRight="24dp"
	            android:layout_height="56dp">
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@color/big_title"
	                android:textSize="@dimen/qqy_16sp"
	                android:layout_centerVertical="true"
	                android:text="@string/sex"/>
	            <TextView
	                android:id="@+id/userinfo_user_sex"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerVertical="true"
	                android:layout_alignParentRight="true"
	                android:textColor="@color/dark_grey"
	                android:textSize="@dimen/qqy_16sp"
	                android:text="@string/sex_man" />
	        </RelativeLayout>
	        <include layout="@layout/p_grey_line"/>
	    </LinearLayout>
	    
	</RelativeLayout>

	<Button 
        android:id="@+id/login_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_login_regist_btn_selector"
        android:layout_alignParentBottom="true"
        android:text="@string/login_out"/>
	
</RelativeLayout>
